tests/NormalTests/paczka1/fuzzy1/78201626.err
Error in line 10: ApyDq A928 13,3
Error in line 1: U2ULbA6asf A636 10,7
Error in line 20: U2ULbA6asf A928 72,5
Error in line 19: MTNB5lHxOx A636 331,8
Error in line 23: U2ULbA6asf S472 81,8
Error in line 32: U2ULbA6asf S720 25,5
Error in line 38: U2ULbA6asf S472 15,7
